src/tests/snapshots/gitu__tests__merge_conflict.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌Merging other-branch                                                           |
                                                                                |
 Unstaged changes (2)                                                           |
 unmerged   new-file                                                            |
 unmerged   new-file-2                                                          |
                                                                                |
 Staged changes (2)                                                             |
 unmerged   new-file                                                            |
 unmerged   new-file-2                                                          |
                                                                                |
 Recent commits                                                                 |
 44bb4dc main modify new-file-2                                  Author Name __ |
 174f1f4 modify new-file                                         Author Name __ |
 b57d72c add new-file-2                                          Author Name __ |
 46c81ca add new-file                                            Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 138f9965bfc1ec5b
