src/tests/snapshots/gitu__tests__mouse_select_hunk_line.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   testfile…                                                           |
                                                                                |
 Staged changes (1)                                                             |
 added      testfile…                                                           |
                                                                                |
▌Recent commits                                                                 |
▌b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 18fe4217f68a5f78
