src/tests/snapshots/gitu__tests__mouse_select_ignore_empty_lines.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   testfile…                                                           |
                                                                                |
▌Recent commits                                                                 |
▌cd4d2d1 main add testfile                                                      |
▌b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: e2979c8c91081336
