src/tests/snapshots/gitu__tests__mouse_select_item.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Recent commits                                                                 |
 cd4d2d1 main add testfile                                                      |
▌b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: b126e9ad6d64df35
