src/tests/snapshots/gitu__tests__mouse_show_ignore_empty_lines.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: firststash                                                    |
                                                                                |
▌Recent commits                                                                 |
▌cd4d2d1 main add testfile                                                      |
▌b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 6ebecdc95e508eda
