src/tests/snapshots/gitu__tests__mouse_show_item.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 commit b66a0bf82020d6a386e94d0fceedec1f817d20c7                                |
 Author: Author Name <author@email.com>                                         |
 Date:   Fri, 16 Feb 2024 11:11:00 +0100                                        |
                                                                                |
     add initial-file                                                           |
                                                                                |
     Commit body goes here                                                      |
                                                                                |
 added      initial-file                                                        |
▌@@ -0,0 +1 @@                                                                  |
▌+hello                                                                         |
▌\ No newline at end of file                                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 82d423f9cf431a2f
