src/tests/snapshots/gitu__tests__moved_file.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Staged changes (1)                                                             |
 renamed    new-file -> moved-file                                              |
                                                                                |
 Recent commits                                                                 |
 46c81ca main add new-file                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: c42955bfe3bab1fa
